# knowrob

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  doxygen-knowrob.css  doxygen.conf  index.html  package.xml  requirements.txt  rosdep.yaml  setup.py  stack.xml  updateReleaseBranch.sh
comp_orgprinciples/: CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml
comp_orgprinciples/launch/: comp_orgprinciples.launch
comp_orgprinciples/owl/: .gitignore  orgprinciples_demo.owl  orgprinciples_demo.owl.in
comp_orgprinciples/prolog/: comp_orgprinciples.pl  init.pl  init.pl.in
comp_semantic_map/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
comp_semantic_map/owl/: .gitignore  comp_semantic_map.owl  comp_semantic_map.owl.in
comp_semantic_map/prolog/: .gitignore  comp_semantic_map.pl  init.pl.in
comp_spatial/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml
comp_spatial/owl/: comp_spatial.owl  comp_spatial.owl.in  test_comp_spatial.owl
comp_spatial/prolog/: comp_spatial.pl  comp_spatial.plt  init.pl  init.pl.in
comp_temporal/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml
comp_temporal/owl/: comp_temporal.owl  comp_temporal.owl.in  test_comp_temporal.owl
comp_temporal/prolog/: comp_temporal.pl  comp_temporal.plt  init.pl
ias_knowledge_base/: .gitignore  CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml
ias_knowledge_base/owl/: catalog-v001.xml  knowrob.owl  knowrob.owl.in  object-change.owl  object-change.owl.in  owl.owl  owl.owl.in  pancake-making.owl  pancake-making.owl.in
ias_knowledge_base/prolog/: action_effects.pl  init.pl  init.pl.in  object_change.pl  process_effects.pl  processes.pl
ias_prolog_addons/: CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml
ias_prolog_addons/prolog/: classifiers.pl  comp_similarity.pl  init.pl  jython.pl
ias_semantic_map/: CMakeLists.txt  manifest.xml
ias_semantic_map/launch/: ias_semantic_map.launch
ias_semantic_map/owl/: .gitignore  ccrl2_semantic_map.owl  ccrl2_semantic_map.owl.in  ccrl2_semantic_map_addons.owl.in  ccrl2_semantic_map_objects.owl.in  ccrl_semantic_map.owl  ccrl_semantic_map.owl.in  ias_map_addons.owl  ias_semantic_map.owl  ias_semantic_map.owl.in  semRoom_semantic_map.owl.in
ias_semantic_map/prolog/: .gitignore  ccrl2_semantic_map.pl  ccrl2_semantic_map.pl.in  ccrl_semantic_map.pl  ias_semantic_map.pl  ias_semantic_map.pl.in  init-ccrl.pl  init.pl  init.pl.in  semRoom_semantic_map.pl.in  semantic_map_utils.pl
json_prolog/: .classpath  .gitignore  .project  CMakeLists.txt  README.md  build.gradle  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml  settings.gradle  setup.py
json_prolog/examples/: JSONPrologTestClient.java  missing_objects.cpp  object_positions.cpp  test_json_prolog.cpp  test_json_prolog.py
json_prolog/json_prolog/: build.gradle
json_prolog/json_prolog_msgs/: build.gradle
json_prolog/launch/: json_prolog.launch
json_prolog/prolog/: init.pl  json_prolog.pl  threaded_query.pl
json_prolog/scripts/: json_prolog_node  json_prolog_test_client
json_prolog/src/: .gitignore  JSONPrologEngine.cpp  JSONPrologNode.cpp  JSONPrologPool.cpp  PlEngineThread.cpp  PrologBindings.cpp  PrologClient.cpp  PrologEngine.cpp  PrologInterface.cpp  PrologInterface.h  PrologNode.cpp  PrologPool.cpp  PrologQueries.cpp  PrologQuery.cpp  cpl_interface.cpp  cpl_interface.h  prolog.cpp  prolog_bindings.cpp  prolog_query_proxy.cpp  prolog_value.cpp
json_prolog_msgs/: CMakeLists.txt  manifest.xml  package.xml
json_prolog_msgs/srv/: PrologFinish.srv  PrologNextSolution.srv  PrologQuery.srv
knowrob/: CMakeLists.txt  README.md  package.xml
knowrob/launch/: knowrob_ros.launch  object_state_publisher.launch
knowrob/msg/: EventToken.msg
knowrob/owl/: action-effects.owl  blocksworld.owl  knowrob_rel_coord_test.owl  queries.owl  test_comp_temporal.owl
knowrob/prolog/: init.pl
knowrob/scripts/: parser_vis.py  quaternion_fix.py
knowrob/src/: object_state_publisher.py
knowrob_actions/: CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml
knowrob_actions/etc/: knowrob2cpl.json
knowrob_actions/launch/: parser_vis.launch
knowrob_actions/owl/: .gitignore  action-effects-all.owl  action-effects-devices.owl  action-effects-kitchen.owl  action-effects-spatial.owl  action-effects.owl  actions.owl  blocksworld.owl  execution-test.owl  exploration-recipe.owl  exploration-recipe.owl.in  object-change.owl  object-search-recipe.owl  pancake-making-test.owl  pancake-making.owl  pancake.owl  parser-test.owl  serve_drink.owl  serveobjectdistributed.owl  test.owl
knowrob_actions/prolog/: action_effects.pl  action_effects.plt  action_planning.pl  init.pl  knowrob_actions.pl  knowrob_actions.plt  object_change.pl  process_effects.pl
knowrob_actions/scripts/: action_streamer.py  parser_vis.py
knowrob_actions/swrl/: action-effects.swrl  blocksworld.swrl
knowrob_cad_parser/: .classpath  .project  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml
knowrob_cad_parser/prolog/: init.pl  knowrob_cad_parser.pl
knowrob_common/: .classpath  .project  CMakeLists.txt  README.md  build.gradle  manifest.xml  package.xml  settings.gradle  setup.py
knowrob_common/knowrob_common/: build.gradle
knowrob_common/launch/: knowrob_objects.launch  knowrob_ros.launch  object_state_publisher.launch  parser_vis.launch
knowrob_common/owl/: .gitignore  DUL.owl  EASE.owl  action-effects.owl  actions.owl  agents.owl  blocksworld.owl  buildings.owl  communication.owl  comp_temporal.owl  computable.owl  dimension.owl  dimensionalunit.owl  groceries.owl  household.owl  kitchen.owl  kitchen_activities.owl  kitchen_furniture.owl  kitchen_tools.owl  knowrob.owl  knowrob_common.owl  motions.owl  (+22 more)
knowrob_household/: CMakeLists.txt  README.md  package.xml
knowrob_map_data/: CMakeLists.txt  package.xml
knowrob_map_tools/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
knowrob_maps/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml  setup.py
(+7173 files in other folders)
