<?xml version="1.0"?>
<package format="2">
  <name>knowrob</name>
  <version>2.0.0</version>
  <description>KnowRob is a knowledge processing framework for robots. It has originally
    been developed in the IAS group at Technische Universitaet Muenchen,
    Germany and is currently maintained by Daniel Beßler at the Institute
    for Artificial Intelligence in Bremen, Germany.

    It provides tools for knowledge acquisition, representation and reasoning
    that are tailored to the demands in mobile robotics.
  </description>
  
  <author>Moritz Tenorth</author>
  <author>Daniel Beßler</author>

  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://www.knowrob.org</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>swi-prolog</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <depend>eigen</depend>
  <depend>libmongoc-dev</depend>


</package>
