<package>
  <name>comp_orgprinciples</name>
  <version>1.0.0</version>
  <description>Routines for reasoning about organizational principles in the environment (Prolog).

     Contains Prolog computables for calculating the best location where a (new) object
     should be placed (or searched for), given a knowledge base containing an Ontology
     including the object's class and information about the locations of other objects
     in the environment.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/comp_orgprinciples</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Schuster</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rosprolog</build_depend>
  <build_depend>ias_prolog_addons</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rosprolog</run_depend>
  <run_depend>ias_prolog_addons</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rosprolog</test_depend> -->
  <!-- <test_depend>ias_prolog_addons</test_depend> -->

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>