<package>
  <name>comp_orgprinciples</name>
  <version>1.0.0</version>
  <description>Routines for reasoning about organizational principles in the environment (Prolog).

     Contains Prolog computables for calculating the best location where a (new) object
     should be placed (or searched for), given a knowledge base containing an Ontology
     including the object's class and information about the locations of other objects
     in the environment.</description>
  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/comp_orgprinciples</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Martin Schuster</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosprolog</build_depend>
  <build_depend>knowrob_common</build_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>knowrob_common</run_depend>

  <export>
      <rosdoc config="rosdoc.yaml"/>
  </export>

</package>